--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
+    "swiper": "^9.2.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -53,6 +54,7 @@
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@redux-devtools/core": "^3.13.1",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "tailwindcss": "^3.2.7"
   }
 }
