--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
+    "sweetalert": "^2.1.2",
     "swiper": "^9.2.4",
     "web-vitals": "^2.1.4"
   },
