--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.2.1",
     "dotenv": "^16.0.3",
     "gh-pages": "^5.0.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
@@ -57,6 +58,7 @@
     "@faker-js/faker": "^7.6.0",
     "@redux-devtools/core": "^3.13.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
     "tailwindcss": "^3.2.7"
   }
 }
