--- a/package.json
+++ b/package.json
@@ -9,7 +9,27 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "tailwindcss": "^3.2.7",
+    "aos": "^2.3.4",
+    "axios": "^1.3.5",
+    "chart.js": "^4.2.1",
+    "dotenv": "^16.0.3",
+    "gh-pages": "^5.0.0",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
+    "sweetalert": "^2.1.2",
+    "swiper": "^9.2.4",
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.16",
+    "@reduxjs/toolkit": "^1.9.5",
+    "react-phone-number-input": "^3.2.25",
+    "react-quill": "^2.0.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.9.0",
+    "react-chartjs-2": "^5.2.0"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -39,26 +59,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
-    "@redux-devtools/core": "^3.13.1",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.3",
-    "tailwindcss": "^3.2.7",
-    "aos": "^2.3.4",
-    "axios": "^1.3.5",
-    "chart.js": "^4.2.1",
-    "dotenv": "^16.0.3",
-    "gh-pages": "^5.0.0",
-    "redux": "^4.2.1",
-    "redux-persist": "^6.0.0",
-    "sweetalert": "^2.1.2",
-    "swiper": "^9.2.4",
-    "@headlessui/react": "^1.7.14",
-    "@heroicons/react": "^2.0.16",
-    "@reduxjs/toolkit": "^1.9.5",
-    "react-phone-number-input": "^3.2.25",
-    "react-quill": "^2.0.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.9.0",
-    "react-chartjs-2": "^5.2.0"
+    "@redux-devtools/core": "^3.13.1"
+
   }
 }
