--- a/package.json
+++ b/package.json
@@ -3,33 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.16",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.3",
-    "tailwindcss": "^3.2.7",
     "aos": "^2.3.4",
     "axios": "^1.3.5",
     "chart.js": "^4.2.1",
     "dotenv": "^16.0.3",
     "gh-pages": "^5.0.0",
-    "redux": "^4.2.1",
-    "redux-persist": "^6.0.0",
-    "sweetalert": "^2.1.2",
-    "swiper": "^9.2.4",
-    "@headlessui/react": "^1.7.14",
-    "@heroicons/react": "^2.0.16",
-    "@reduxjs/toolkit": "^1.9.5",
+    "lodash": "^4.17.21",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
     "react-phone-number-input": "^3.2.25",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
-    "react-chartjs-2": "^5.2.0"
+    "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
+    "sweetalert": "^2.1.2",
+    "swiper": "^9.2.4",
+    "tailwindcss": "^3.2.7",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -60,6 +61,5 @@
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@redux-devtools/core": "^3.13.1"
-
   }
 }
